--- a/skins/moono/dialog_ie7.css
+++ b/skins/moono/dialog_ie7.css
@@ -47,18 +47,14 @@ This file contains styles to used by Internet Explorer 7 only.
 	vertical-align: top;
 }
 
-/* IE7 needs positioning on text fields, to not stretch dialog horizontally. (#8971) */
-input.cke_dialog_ui_input_text,
-input.cke_dialog_ui_input_password
+/* 	IE7 doesn't support box-sizing and therefore we cannot
+	have sexy inputs which go well with the layout. */
+.cke_dialog_ui_input_text,
+.cke_dialog_ui_input_password,
+.cke_dialog_ui_input_textarea,
+.cke_dialog_ui_input_select
 {
-	position: absolute;
-}
-
-div.cke_dialog_ui_input_text,
-div.cke_dialog_ui_input_password
-{
-	position: relative;
-	height: 25px;
+	padding: 0 !important;
 }
 
 /* Predefined border to avoid visual size change impact. */
